[package]
name = "bevy_game_jam_6"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]

[dependencies]
avian3d = { version = "0.3" }
bevy = { version = "0.16", features = ["glam_assert", "serialize"] }
bevy_auto_plugin = { version = "0.2.1", features = ["nightly_pre_2025_04_16"] }
bevy_frame_count_log_prefix = { git = "https://github.com/StrikeForceZero/bevy_frame_count_log_prefix", branch = "main", features = ["fixed_update"], optional = true }
bevy_rand = { version = "0.11", features = ["bevy_reflect", "serialize", "wyrand"] }
bevy_prng = { version = "0.11", features = ["bevy_reflect", "serialize", "wyrand"] }
rand_core = { version = "0.9", features = ["serde"] }
bevy_egui = { version = "0.34", features = ["serde"] }
# unreleased version with support for immutable components
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", rev = "a99c8fbfff95dd92134f44aa705573bc5b0d3f10", features = ["highlight_changes"], optional = true }
egui_dock = { version = "0.16", optional = true }
smart-default = { version = "0.7" }
itertools = { version = "0.14" }
# Compile low-severity logs out of native builds for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
# Compile low-severity logs out of web builds for performance.
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[patch.crates-io]
# Waiting for 16.1 for custom viewport picking fixes
bevy = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_a11y = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_animation = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_app = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_asset = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_audio = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_color = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_core_pipeline = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_derive = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_diagnostic = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_ecs = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_encase_derive = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_gilrs = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_gizmos = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_gltf = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_image = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_input = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_input_focus = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_internal = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_log = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_macro_utils = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_math = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_mesh = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_mikktspace = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_pbr = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_picking = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_platform = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_ptr = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_reflect = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_render = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_scene = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_sprite = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_state = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_tasks = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_text = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_time = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_transform = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_ui = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_utils = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_window = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }
bevy_winit = { git = "https://github.com/StrikeForceZero/bevy", branch = "main-v0.16" }

[features]
# Default to a native dev build.
default = ["dev_native"]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
    "egui_inspector",
    "egui_dock",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
    "dev_frame_count_log"
]
egui_inspector = ["bevy-inspector-egui"]
dev_frame_count_log = [
    "bevy_frame_count_log_prefix"
]
wasm = [
    "bevy_rand/wasm_js"
]

[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false

[package.metadata.bevy_cli.web]
# Disable native features for web builds.
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]


[lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

# You can configure the warning levels of Bevy lints here. For a list of all lints, see:
# <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used for `bevy run web` automatically
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
